--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<li><a href="https://www.instagram.com/ddlm.dlm/?hl=pt-br"><i class="icon-instagram2"></i></a></li>
 									<li><a href="https://www.facebook.com/DalmarisDiLima"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/dalmaris-lima-a09bb714b/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-github2"></i></a></li>
+									<li><a href="https://github.com/DalmarisL"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -92,7 +92,7 @@
 							<li><a href="https://www.instagram.com/ddlm.dlm/?hl=pt-br"><i class="icon-instagram2"></i></a></li>
 									<li><a href="https://www.facebook.com/DalmarisDiLima"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/dalmaris-lima-a09bb714b/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-github2"></i></a></li>
+									<li><a href="https://github.com/DalmarisL"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
