--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/medim.jpeg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Nov. 21th 20119</span>
-							<h3><a href="#">Effectiveness of classification models</a></h3>
+							<h3><a href="https://medium.com/@dlm_32522/effectiveness-of-classification-models-86850b169851">Effectiveness of classification models</a></h3>
 							<p>A hands-on activity on machine learning model assessment metrics.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i></li>
