--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/medim.jpeg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/medim.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Nov. 21th 20119</span>
 							<h3><a href="https://medium.com/@dlm_32522/effectiveness-of-classification-models-86850b169851">Effectiveness of classification models</a></h3>
@@ -201,7 +201,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p> Dalmaris Lima</p>
+					<p></p>
 				</div>
 			</div>
 		</div>
