add_link_lattes

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 								</div>
 								<div class="timeline-body">
 									<p>Development and evaluation of a gamified intelligent tutor system for medical education.</p>
+									<p><a href=" http://lattes.cnpq.br/3877356039478514">Curriculum Lattes</a></p>	
 								</div>
 							</div>
 						</li>
