--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Dalmaris Lima</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		p{
+			text-align: justify;
+		}
+	</style>
 
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
