--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Dalmaris de Lima Moraes</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Dalmaris de Lima</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+55 82 991782299</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">dlm@ic.ufal.br</span></li>
 						
@@ -197,12 +197,13 @@
 						</div> 
 					</div>
 				</div>
+			</div>
 	
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p></p>
+					<p>Dalmaris Lima</p>
 				</div>
 			</div>
 		</div>
